[package]
name = "webemu"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "webemu"
path = "src/main.rs"
required-features = ["native"]

[dependencies]
wasm-bindgen = "0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rfd = "0.15"
minifb = "0.27"

[features]
native = []